# AAM

./: .gitmodules  CMakeLists.txt  aamfilter.cpp  aammodel.cpp  aammodel.h  common.h  fpevaluater.cpp  fpevaluater.h  fpfilter.cpp  ioutils.cpp  ioutils.h  utils.h
features/: HoG.cpp  vl_hog.cpp
matlab/: AAM_script.m  AAMfilter.m  AAMfilter_script.m  batch_driver.m  build_model_2d_script.m  draw_shape.m  fit_2d.m  pa_warp_composition.m  pa_warp_m.m  single_driver.m  triagulation.mat  visualize_set.m
matlab/FeaturePointsEval/: driver.m  extract_patch.m  read_points.m
matlab/FeaturePointsEval/features/: HoG.cpp  HoG.mexmaci64  License.txt
matlab/inexact_alm_rpca/: inexact_alm_rpca.m
python/: showsift.py  visualize_features.py
